# jupyter-book-template

./: .buildinfo  README.md  Welcome_To_Colab.html  intro.html  markdown-notebooks.html  notebooks.html  objects.inv  pyproject.toml  searchindex.js
_sources/: Welcome_To_Colab.ipynb
myfirstbook/: _toc.yml  altair-intro.ipynb
myfirstbook/_build/.doctrees/: Welcome_To_Colab.doctree  altair-intro.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: altair-intro.html  genindex.html  markdown.html  objects.inv  search.html  searchindex.js
myfirstbook/_build/html/_sources/: altair-intro.ipynb  notebooks.ipynb
myfirstbook/_build/jupyter_execute/: Welcome_To_Colab.ipynb  altair-intro.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
